--- a/.github/workflows/gsi.yml
+++ b/.github/workflows/gsi.yml
@@ -24,8 +24,8 @@ jobs:
               sudo -E apt-get -qq update
               sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev rsync flex bison ccache openjdk-8-jdk expect aria2
               git config --global user.name "smpriiiyo"
-              git config --global user.email "priiiyoplus@gmail.com"
-              git clone --recurse-submodules https://github.com/smpriiiyo/PriiiyoGSIs ErfanGSIs
+              git config --global user.email "priiyoooo@gmail.com"
+              git clone --recurse-submodules https://github.com/smpriiiyo/PriiiyoGSIs.git ErfanGSIs
      
        - name: Setup Erfan Tools
          continue-on-error: true
