--- a/.github/workflows/gsi.yml
+++ b/.github/workflows/gsi.yml
@@ -1,6 +1,10 @@
-name: Priiiyo-gsibot automated
- 
-on: push
+name: Bot Environment
+
+on:
+  push:
+    branches: [ main ]
+    paths-ignore: 'README.md'
+  workflow_dispatch:
 
 env:
   TYPE: build
@@ -91,3 +95,4 @@ jobs:
               expect \"master -> master\"
               set timeout -10
               interact"
+              git push -q https://${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
