--- a/.github/workflows/gsi.yml
+++ b/.github/workflows/gsi.yml
@@ -29,7 +29,7 @@ jobs:
               sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev rsync flex bison ccache openjdk-8-jdk expect aria2
               git config --global user.name "priiiiyo"
               git config --global user.email "priiyoooo@gmail.com"
-              git clone --recurse-submodules https://github.com/priiiiyo/ErfanGSIs.git ErfanGSIs
+              git clone --recurse-submodules https://github.com/priiiiyo/ErfanGSIs.git
               curl -sL https://git.io/file-transfer | sh
 
      
